<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/text_view_crawler_switch_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:gravity="left|center_vertical"
        android:text="@string/title_crawler_switch"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Switch
        android:id="@+id/switch_crawler_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBaselineOf="@id/text_view_crawler_switch_title"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toRightOf="@id/text_view_crawler_switch_title"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_view_crawler_switch_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/description_crawler_switch"
        app:layout_constraintLeft_toLeftOf="@id/text_view_crawler_switch_title"
        app:layout_constraintRight_toLeftOf="@id/switch_crawler_start"
        app:layout_constraintTop_toBottomOf="@id/text_view_crawler_switch_title" />

    <TextView
        android:id="@+id/text_view_timer_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="left|center_vertical"
        android:text="@string/title_timer_duration"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/text_view_crawler_switch_title"
        app:layout_constraintTop_toBottomOf="@id/text_view_crawler_switch_description" />

    <TextView
        android:id="@+id/text_view_time"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/time_duration_formatter"
        app:layout_constraintBaseline_toBaselineOf="@id/text_view_timer_title"
        app:layout_constraintLeft_toLeftOf="@id/switch_crawler_start"
        app:layout_constraintRight_toRightOf="@id/switch_crawler_start" />

    <TextView
        android:id="@+id/text_view_timer_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/description_timer_duration"
        app:layout_constraintLeft_toLeftOf="@id/text_view_timer_title"
        app:layout_constraintRight_toLeftOf="@id/text_view_time"
        app:layout_constraintTop_toBottomOf="@id/text_view_timer_title" />

    <android.support.constraint.Group
        android:id="@+id/group_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text_view_time,text_view_timer_title,text_view_timer_description" />
</android.support.constraint.ConstraintLayout>